flink/session/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-session-ingress
  namespace: flink
spec:
  rules:
  - host: flink.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jobmanager-service
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: resourcemanager-service
  namespace: flink
spec:
  type: NodePort
  ports:
    - port: 6123
      targetPort: 6123
      name: rm-service
  selector:
    app: flink-session
    component: jobmanager
---
apiVersion: v1
kind: Service
metadata:
  name: jobmanager-service
  namespace: flink
spec:
  ports:
    - port: 80
      targetPort: 8081
      name: jm-service
      protocol: TCP
  type: NodePort
  selector:
    app: flink-session
    component: jobmanager
